--- a/instance/default.cfg
+++ b/instance/default.cfg
@@ -1,6 +1,6 @@
 SITE_NAME="MyCompany - Springfield"
 SITE_LOCATION="Springfield, USA"
-THEME="cerulean" # see static/css for available themes
+THEME="united" # see static/css for available themes
 TEST_IPV4="127.0.0.1" # this should be an IP that's always 'up' at this location
 TEST_IPV6="::1" # same here, don't use the loopback address!
 TEST_FILES=["100MB", "1000MB"] # make sure to put test files in static/ with a .test extension (e.g. 100MB.test)
